--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <footer>
         <p>Desenvolvido por Duda Kaori e Luiza Carmags</p>
     </footer>
+     <script type="module" src="graficos/common.js"></script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
+    <script type="module" src="graficos/quantidadeUsuarios.js"></script>
 </body>
 </html>
